--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <a href="{{ '/' | relative_url }}" class="flex items-center space-x-3">
                     <!-- Logo/Icône des 9 Poilus -->
                     <div class="w-12 h-12 bg-gradient-to-br from-poilu-soleil to-poilu-turquoise rounded-full flex items-center justify-center shadow-lg">
-                        <span class="text-poilu-roy text-xl font-bold">🐾</span>
+                        <img src="/assets/images/9-poilus.png" alt="logo">
                     </div>
                     <div>
                         <h1 class="text-2xl font-heading font-bold text-poilu-roy">{{ site.title }}</h1>
