CORRECTION CRITIQUE CSS - Front cassé réparé !
 PROBLÈME RÉSOLU : CSS ne se chargeait plus, front complètement cassé

 CORRECTIONS APPORTÉES :
- Suppression @import problématique dans style.scss
- Création de main.css contenant TailwindCSS complet
- Modification _layouts/default.html pour charger les 2 CSS
- Séparation claire : main.css (TailwindCSS) + style.css (custom)

 RÉSULTATS :
- TailwindCSS se charge maintenant correctement
- Jekyll compile sans erreurs
- Site fonctionne avec tous les styles
- Livereload opérationnel

Le front affiche maintenant correctement tous les styles !

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
     {% seo %}
     
     <!-- TailwindCSS -->
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <!-- Custom styles -->
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     
     <!-- Google Fonts pour la charte graphique -->
