--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,8 @@
     <!-- SEO -->
     {% seo %}
     
-    <!-- TailwindCSS -->
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <!-- TailwindCSS compilé -->
+    <link rel="stylesheet" href="{{ '/assets/css/output.css' | relative_url }}">
     
     <!-- Google Fonts pour la charte graphique -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
