--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/images/og-image.jpg">
+    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/images/og-image.webp">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:site_name" content="{{ site.title }}">
     
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
     <meta property="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta property="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <meta property="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/images/og-image.jpg">
+    <meta property="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/images/og-image.webp">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
