logo et signature

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,7 @@
         
         <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
             <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}. Tous droits réservés.</p>
-            <p class="mt-2 text-sm">Développé avec Jekyll et TailwindCSS</p>
+            <p class="mt-2 text-sm">Développé avec Jekyll et TailwindCSS par <a href="https://www.peakcl.com" class="text-poilu-soleil hover:underline"><img src="/assets/logos/PeakCL.svg" alt="PeackCL-développement web"> PeakCL</a></p>
         </div>
     </div>
 </footer>
