--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2835,6 +2835,10 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
 .hover\:opacity-30:hover {
   opacity: 0.3;
 }
