--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                         <img src="/assets/logos/logo.png" alt="logo">
                     </div>
                     <div>
-                        <h1 class="text-2xl font-heading font-bold text-poilu-roy">{{ site.title }}</h1>
+                        <h1 class="text-2xl font-cinzel-bold text-poilu-roy">{{ site.title }}</h1>
                         <p class="text-sm font-script text-poilu-gris -mt-1">La vraie vie avec nos animaux</p>
                     </div>
                 </a>
