--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
             <!-- Company Info -->
             <div class="col-span-1 md:col-span-2">
-                <h3 class="text-xl font-bold mb-4">{{ site.title }}</h3>
+                <h3 class="text-xl font-cinzel font-bold mb-4">{{ site.title }}</h3>
                 <p class="text-gray-300 mb-4">{{ site.description }}</p>
                 <div class="flex space-x-4">
                     <!-- Social Media Links -->
@@ -60,7 +60,7 @@
         
         <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
             <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}. Tous droits réservés.</p>
-            <p class="mt-2 text-sm">Développé avec Jekyll et TailwindCSS par <a href="https://www.peakcl.com" class="text-poilu-soleil hover:underline"><img src="/assets/logos/PeakCL.svg" alt="PeackCL-développement web"> PeakCL</a></p>
+            <p class="mt-2 text-sm">Développé avec Jekyll et TailwindCSS par <a href="https://www.peakcl.com" class="text-poilu-soleil hover:underline"><img class="w-10 h-auto" src="/assets/logos/PeakCL.svg" alt="PeackCL-développement web"> PeakCL</a></p>
         </div>
     </div>
 </footer>
