--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="flex items-center">
                 <a href="{{ '/' | relative_url }}" class="flex items-center space-x-3">
                     <!-- Logo/Icône des 9 Poilus -->
-                    <div class="w-12 h-12 bg-gradient-to-br from-poilu-soleil to-poilu-turquoise rounded-full flex items-center justify-center shadow-lg">
+                    <div class="w-12 h-12 flex items-center justify-center shadow-lg">
                         <img src="/assets/logos/logo.png" alt="logo">
                     </div>
                     <div>
